@@ -12,6 +12,10 @@ __version__ = '1.4.1.dev2'
 
 from py import _apipkg
 
+# so that py.error.* instances are picklable
+import sys
+sys.modules['py.error'] = _apipkg.AliasModule("py.error", "py._error", 'error')
+
 _apipkg.initpkg(__name__, attr={'_apipkg': _apipkg}, exportdefs={
     # access to all standard lib modules
     'std': '._std:std',
@@ -141,3 +145,4 @@ _apipkg.initpkg(__name__, attr={'_apipkg': _apipkg}, exportdefs={
     },
 
 })
+
